--- a/consultar_canal_URD.html
+++ b/consultar_canal_URD.html
@@ -5,7 +5,7 @@
   <title>YouTube Últimos Videos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 1em; background: #bdbfc7; }
+    body { font-family: sans-serif; margin: 0; padding: 1em; background: #bdbfc7; max-width: 500px; margin: 0 auto;}
     h1 { font-size: 1.5em; justify-self: center; color: #ff0033; text-shadow: 0px 0px 5px #ffffff, 0px 0px 14px #5b5b5b;}
     input, button { width: 100%; padding: 0.7em; margin: 0.5em 0; font-size: 1em; border-radius: 5px;}
     input {max-width: 88vw;}
