--- a/invitacion_ricardo80/inv.html
+++ b/invitacion_ricardo80/inv.html
@@ -9,7 +9,7 @@
 <body>
     <div class="radial-bg">
         <div class="container">
-            <img id="overlay" src="imagen_default.png" alt="Imagen de invitación">
+            <img id="overlay" src="imagen_default.webp" alt="Imagen de invitación">
             <h1 id="title">¡CUMPLEAÑOS!</h1>
             <p id="name">Hola!</p>
             <p id="description">Te invitamos a celebrar junto a Ricardo sus 80 años.<br>¡Esperamos verte!</p>
