--- a/groq_chat.html
+++ b/groq_chat.html
@@ -36,7 +36,11 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: var(--bg-primary);
+            background-color: var(--bg-primary);
+            background-image: 
+                radial-gradient(circle at 20% 50%, rgba(188, 19, 254, 0.15) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(0, 243, 255, 0.1) 0%, transparent 50%);
+            background-attachment: fixed;
             color: var(--text-primary);
             height: 100vh;
             height: 100dvh;
@@ -45,10 +49,6 @@
             flex-direction: column;
             position: fixed;
             width: 100%;
-            /* Fondo restaurado sin animación */
-            background-image: 
-                radial-gradient(circle at 20% 50%, rgba(188, 19, 254, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(0, 243, 255, 0.1) 0%, transparent 50%);
         }
 
         /* Grid animado solo en desktop */
@@ -75,7 +75,9 @@
         .setup-screen {
             position: fixed;
             inset: 0;
-            background: var(--bg-primary);
+            background-color: var(--bg-primary);
+            background-image: 
+                radial-gradient(circle at 50% 50%, rgba(0, 243, 255, 0.1) 0%, transparent 70%);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -83,8 +85,6 @@
             padding: 2rem;
             z-index: 100;
             will-change: opacity;
-            background-image: 
-                radial-gradient(circle at 50% 50%, rgba(0, 243, 255, 0.1) 0%, transparent 70%);
         }
 
         .setup-screen.hidden {
