--- a/groq_chat.html
+++ b/groq_chat.html
@@ -543,7 +543,7 @@
         .scroll-to-top-btn {
             font-size: 0.75rem;
             font-weight: 900;
-            transform: scale(1.2);
+            transform: scaleX(1.3) scale(1.2);
         }
 
         .action-btn.copied {
