groq chat, ajuste visuales
Ahustes visuales para mostrar código dentro de mensajes ( .message code{} )

--- a/groq_chat.html
+++ b/groq_chat.html
@@ -13,6 +13,7 @@
             --bg-secondary: #0a0a0f;
             --bg-tertiary: #12121a;
             --neon-cyan: #00f3ff;
+            --neon-cyan-code: #6ef8ff;
             --neon-pink: #ff00ff;
             --neon-purple: #bc13fe;
             --neon-blue: #0066ff;
@@ -773,8 +774,10 @@
 
         .message code {
             font-family: 'Courier New', monospace;
-            font-size: 0.9em;
-            color: var(--neon-cyan);
+            /* font-size: 0.9em; */
+            font-size: 0.9rem;
+            color: var(--neon-cyan-code);
+            line-height: 0px;
         }
 
         .message p {
