groq chat, estilizo boton copiar codigo

--- a/groq_chat.html
+++ b/groq_chat.html
@@ -823,10 +823,10 @@
         }
 
         .opciones_codigo button {
-            background-color: #08010c;
+            background-color: #450a67ab; /* viejo: #08010c */
             margin-right: 3px;
             border: none;
-            border-radius: 2px;
+            border-radius: 3px;
             padding: 1px 5px 1px 5px;
             color: white;
             cursor: pointer;
